# scrapy-plasmate

./: LICENSE  README.md  pyproject.toml
examples/: example_spider.py
scrapy_plasmate/: __init__.py  middleware.py  utils.py
tests/: test_middleware.py
